<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/borda"
    android:padding="@dimen/borda"
    tools:context=".ui.notifications.NotificationsFragment">

    <Button
        android:id="@+id/btCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Adicionar_Palavra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btJogar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comecar"
        app:layout_constraintBottom_toTopOf="@+id/btCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selecione_seu_avatar"
        android:textSize="40sp"
        android:textColor="#FF6200EE"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOrc" />

    <TextView
        android:id="@+id/textForca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jogo_da_forca"
        android:textSize="48sp"
        android:textColor="#FF3700B3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textOrc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orcs_vs_humanos"
        android:textSize="40sp"
        android:textColor="#FF6200EE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textForca" />

    <EditText
        android:id="@+id/caixaTentativa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Jogardor1"
        android:maxLength="1"
        app:layout_constraintBottom_toTopOf="@+id/btJogar"
        app:layout_constraintEnd_toEndOf="@+id/btJogar"
        app:layout_constraintStart_toStartOf="@+id/btJogar" />

</android.support.constraint.ConstraintLayout>